--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
+.nav-link:hover{
+    color:white !important;
+    background-color: #576EE0;
+
+
+}
+.nav-link{
+    color: black !important;
+    font-weight: 500 !important;
+}
 .home{
     margin-top: 150px;
     /* padding-top: 90px; */
@@ -17,6 +27,9 @@
     background-color: #435ACB;
     border: none;
     color: white;
+}
+.contactme:hover{
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 .aboutimg{
     border-radius: 250px;
@@ -59,13 +72,15 @@
     background-color: #576EE0;
     height: 200px;
 }
-
-.col:hover{
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-
-}
-.acard{
+.card-title a{
     text-decoration: none;
 }
+
+.cardhover:hover{
+    transform: scale(1.01);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    transition: .5s;
+}
+
 
 
